POWR-1093 post update cex to get config straight.

--- a/web/sites/default/config/entity_browser.browser.media_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.media_browser.yml
@@ -5,25 +5,25 @@ dependencies:
   config:
     - views.view.media
   module:
-    - lightning_media
+    - entity_browser_entity_form
     - views
 _core:
   default_config_hash: kT3o2OhRMWgZX6kGxRYSsItntaw241e3UwpGCD3RpJE
 name: media_browser
 label: 'Media browser'
-display: iframe
+display: modal
 display_configuration:
-  width: 100%
-  height: '640'
-  link_text: 'Select entities'
-  auto_open: true
-selection_display: no_display
+  width: ''
+  height: ''
+  link_text: 'Select media'
+  auto_open: false
+selection_display: multi_step_display
 selection_display_configuration:
-  entity_type: node
+  entity_type: media
   display: label
   display_settings: {  }
   select_text: 'Use selected'
-  selection_hidden: 0
+  selection_hidden: false
 widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
