--- a/web/sites/default/config/pathauto.pattern.groups.yml
+++ b/web/sites/default/config/pathauto.pattern.groups.yml
@@ -1,24 +1,27 @@
-uuid: 4b9cc068-8f7f-4d00-9cb9-896de74c5b37
+uuid: 727afc93-ed07-42bc-98d8-98699056c4b3
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - group
-id: group_offices
-label: 'Group: offices'
+id: groups
+label: Groups
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  0f50a112-248c-4e94-9f0e-722438519c86:
+  16a4b033-02cd-4be1-b3cc-77bcdcf18875:
     id: 'entity_bundle:group'
     bundles:
       bureau_office: bureau_office
       elected_official: elected_official
+      group: group
+      program: program
+      project: project
     negate: false
     context_mapping:
       group: group
-    uuid: 0f50a112-248c-4e94-9f0e-722438519c86
+    uuid: 16a4b033-02cd-4be1-b3cc-77bcdcf18875
 selection_logic: and
 weight: -2
 relationships: {  }
