--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -79,5 +79,6 @@ permissions:
   - 'view own unpublished content'
   - 'view page revisions'
   - 'view search api pages'
+  - 'view service_location revisions'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
