--- a/web/sites/default/config/views.view.group_members.yml
+++ b/web/sites/default/config/views.view.group_members.yml
@@ -600,6 +600,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - route.group
+        - user.group_permissions
       tags:
         - 'config:field.storage.group_content.group_roles'
   page_1:
@@ -628,5 +630,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - route.group
+        - user.group_permissions
       tags:
         - 'config:field.storage.group_content.group_roles'
