--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
@@ -8,11 +8,24 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_enable_documents_menu_item
+    - field.field.group.bureau_office.field_enable_events_menu_item
+    - field.field.group.bureau_office.field_enable_guides_and_informat
+    - field.field.group.bureau_office.field_enable_news_and_notices_me
+    - field.field.group.bureau_office.field_enable_offices_and_program
+    - field.field.group.bureau_office.field_enable_programs_menu_item
+    - field.field.group.bureau_office.field_enable_projects_menu_item
+    - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_groups
+    - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
+    - field.field.group.bureau_office.field_menu_link
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
+    - field.field.group.bureau_office.field_search_keywords
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
@@ -26,7 +39,7 @@ mode: search_result
 content:
   field_summary:
     type: string
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -68,7 +81,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     region: content
     settings:
       link_to_entity: true
@@ -128,4 +141,5 @@ hidden:
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
   uid: true
