--- a/web/sites/default/config/field.field.group.project.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.project.field_parent_group.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.group.field_parent_group
     - group.type.bureau_office
     - group.type.elected_official
+    - group.type.group
     - group.type.program
     - group.type.project
   module:
@@ -30,6 +31,7 @@ settings:
     target_bundles:
       bureau_office: bureau_office
       elected_official: elected_official
+      group: group
       program: program
       project: project
     sort:
