--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -18,9 +18,34 @@ permissions:
   - 'administer nodes'
   - 'break content lock'
   - 'create alert content'
+  - 'create charter_article content'
+  - 'create charter_chapter content'
+  - 'create charter_section content'
+  - 'create code_chapter content'
+  - 'create code_section content'
+  - 'create code_title content'
   - 'create field_popular'
   - 'create field_search_keywords'
   - 'create field_shortname_or_acronym'
+  - 'delete all revisions'
+  - 'delete any charter_article content'
+  - 'delete any charter_chapter content'
+  - 'delete any charter_section content'
+  - 'delete any code_chapter content'
+  - 'delete any code_section content'
+  - 'delete any code_title content'
+  - 'delete charter_article revisions'
+  - 'delete charter_chapter revisions'
+  - 'delete charter_section revisions'
+  - 'delete code_chapter revisions'
+  - 'delete code_section revisions'
+  - 'delete code_title revisions'
+  - 'delete own charter_article content'
+  - 'delete own charter_chapter content'
+  - 'delete own charter_section content'
+  - 'delete own code_chapter content'
+  - 'delete own code_section content'
+  - 'delete own code_title content'
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
@@ -101,7 +126,13 @@ permissions:
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view building revisions'
+  - 'view charter_article revisions'
+  - 'view charter_chapter revisions'
+  - 'view charter_section revisions'
   - 'view city_service revisions'
+  - 'view code_chapter revisions'
+  - 'view code_section revisions'
+  - 'view code_title revisions'
   - 'view development_permit revisions'
   - 'view event revisions'
   - 'view field_menu_link'
@@ -116,3 +147,4 @@ permissions:
   - 'view own field_search_keywords'
   - 'view page revisions'
   - 'view service_location revisions'
+  - 'view top_search revisions'
