--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -1052,7 +1052,7 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
@@ -1061,6 +1061,8 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
+        - route.group
+        - user.group_permissions
       tags:
         - 'config:field.storage.node.field_reviewer'
   page_1:
@@ -1081,7 +1083,7 @@ display:
         context: '0'
         menu_name: main
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
@@ -1090,5 +1092,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
+        - route.group
+        - user.group_permissions
       tags:
         - 'config:field.storage.node.field_reviewer'
