--- a/web/sites/default/config/views.view.group_offices.yml
+++ b/web/sites/default/config/views.view.group_offices.yml
@@ -6,8 +6,13 @@ dependencies:
     - field.storage.group.field_summary
     - group.type.bureau_office
     - group.type.program
+    - taxonomy.vocabulary.group_type
+  content:
+    - 'taxonomy_term:group_type:c7237379-70a2-44a9-9500-d669b373b39b'
+    - 'taxonomy_term:group_type:cf3f697a-663a-40c2-b380-326c8621e8c8'
   module:
     - group
+    - taxonomy
     - user
 id: group_offices
 label: 'Group: Offices'
@@ -241,6 +246,51 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
+        field_group_type_target_id:
+          id: field_group_type_target_id
+          table: group__field_group_type
+          field: field_group_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            58: 58
+            59: 59
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: true
+          type: select
+          limit: true
+          vid: group_type
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       sorts:
         label:
           id: label
@@ -313,6 +363,10 @@ display:
       use_more_text: 'View all programs'
       link_url: ''
       link_display: page_1
+      filter_groups:
+        operator: AND
+        groups:
+          1: OR
     cache_metadata:
       max-age: -1
       contexts:
@@ -320,6 +374,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
         - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
@@ -356,6 +411,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
         - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
