POWR-968 Switch from dblog to loggly and papertrail

--- a/.lando.yml
+++ b/.lando.yml
@@ -9,6 +9,7 @@ config:
   cache: false
 services:
   appserver:
+    type: php:custom
     build_as_root:
       - /bin/sh -c "cp /app/cop_ca_*.crt /usr/local/share/ca-certificates/"
       - update-ca-certificates
@@ -18,6 +19,8 @@ services:
     config:
       conf: xdebug.ini
     overrides:
+      build: ./php
+      image: devwithlando/pantheon-appserver:7.2-2-custom
       environment:
         BEHAT_PARAMS: '{"extensions" : {"Behat\\MinkExtension" : {"base_url" : "https://portlandor.lndo.site"}, "Drupal\\DrupalExtension" : {"drush" :   {  "root":  "/app/web" }}}}'
         MINK_DRIVER_ARGS: '["chrome", null, "http://chromedriver:4444/wd/hub"]'
