--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
         "drupal/migrate_source_csv": "^2.2",
         "drupal/migrate_tools": "^4.1",
         "drupal/mimemail": "^1.0@alpha",
+        "drupal/monolog": "^1.3",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/pantheon_advanced_page_cache": "^1.0",
