POWR-983-2 Revert bureau/office and program card template for migration to generic groups

--- a/web/sites/default/config/core.entity_view_display.group.program.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.featured.yml
@@ -33,7 +33,7 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: cloudy_card
+      id: cloudy_card--small
       library: null
       disable_css: false
       entity_classes: all_classes
