--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -1,3 +1,14 @@
+cloudy_card--small:
+  label: Card small
+  category: Cloudy
+  template: templates/ds/layout--ds-card--small
+  class: '\Drupal\ds\Plugin\DsLayout'
+  regions:
+    first:
+      label: Image
+    second:
+      label: Content
+
 cloudy_card:
   label: Card
   category: Cloudy
