--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
@@ -35,7 +35,7 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: cloudy_card
+      id: cloudy_card--small
       library: null
       disable_css: false
       entity_classes: all_classes
