POWR-1093 add a command for easy composer update.

--- a/.lando.yml
+++ b/.lando.yml
@@ -93,7 +93,15 @@ tooling:
       - appserver: drush cr -y
       - appserver: echo "Building theme asset files..."
       - node: npm -C /app/web/themes/custom/cloudy run build:dev
-  
+  cupex:
+    description: Composer update, database update, and config export to get a clean module or theme update
+    cmd:
+      - appserver: echo "Updating Composer dependencies..."
+      - appserver: composer update
+      - appserver: echo "Run database updates..."
+      - appserver: drush updb -y
+      - appserver: echo "Exporting Drupal config..."
+      - appserver: drush cex -y
   behat:
     service: appserver
     description: "Run behat tests"
