--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "drupal/key": "^1.8",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
+        "drupal/logs_http": "^1.0",
         "drupal/maxlength": "^1.0",
         "drupal/menu_breadcrumb": "^1.8",
         "drupal/menu_link": "^1.0@alpha",
