POWR-968 Log to logit.io also

--- a/web/sites/default/services.yml
+++ b/web/sites/default/services.yml
@@ -176,7 +176,7 @@ parameters:
   monolog.channel_handlers:
     # Log to the syslog by default.
     default:
-      handlers: ['drupal.dblog', 'loggly', 'papertrail']
+      handlers: ['drupal.dblog', 'loggly', 'papertrail', 'logitio']
       formatter: 'loggly'
     # Send the php channel to web server's error log and the browser console:
     php:
@@ -192,6 +192,9 @@ services:
   monolog.handler.papertrail:
     class: Monolog\Handler\SyslogUdpHandler
     arguments: ['logs4.papertrailapp.com', 54872]
+  monolog.handler.logitio:
+    class: Monolog\Handler\SyslogUdpHandler
+    arguments: ['f7cbbfe7-e3aa-45c7-b385-3e4e8cd20ed8-ls.logit.io', 21869]
   # monolog.handler.browser_console:
   #   class: Monolog\Handler\BrowserConsoleHandler
   #   # Set alert as the minimum level (ignores emergency) and disable bubbling for this Handler
