POWR-1116 fixed sitewide view sorting, removed broken handlers

--- a/web/sites/default/config/views.view.news_index.yml
+++ b/web/sites/default/config/views.view.news_index.yml
@@ -244,29 +244,17 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-        search_api_relevance:
-          id: search_api_relevance
+        content_title:
+          id: content_title
           table: search_api_index_full_index
-          field: search_api_relevance
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
-        title:
-          id: title
-          table: search_api_index_full_index
-          field: title
+          field: content_title
           relationship: none
           group_type: group
           admin_label: ''
           order: ASC
           exposed: false
           expose:
-            label: Title
+            label: ''
           plugin_id: search_api
       title: News
       header:
