--- a/web/sites/default/config/views.view.projects_index.yml
+++ b/web/sites/default/config/views.view.projects_index.yml
@@ -235,14 +235,14 @@ display:
             - title
           plugin_id: search_api_fulltext
       sorts:
-        field_date_time_range:
-          id: field_date_time_range
+        content_title:
+          id: content_title
           table: search_api_index_full_index
-          field: field_date_time_range
+          field: content_title
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          order: ASC
           exposed: false
           expose:
             label: ''
