--- a/web/sites/default/config/views.view.services_fullindex.yml
+++ b/web/sites/default/config/views.view.services_fullindex.yml
@@ -245,34 +245,10 @@ display:
           expose:
             label: Popular
           plugin_id: search_api
-        title:
-          id: title
+        content_title:
+          id: content_title
           table: search_api_index_full_index
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: true
-          expose:
-            label: Title
-          plugin_id: search_api
-        search_api_relevance:
-          id: search_api_relevance
-          table: search_api_index_full_index
-          field: search_api_relevance
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
-        title_1:
-          id: title_1
-          table: search_api_index_full_index
-          field: title
+          field: content_title
           relationship: none
           group_type: group
           admin_label: ''
