POWR-1093 export all the bureau display configs again

--- a/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
@@ -69,10 +69,12 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_mode: true
   field_time_to_complete: true
   field_topics: true
