--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -311,5 +311,6 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   links: true
