--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -39,10 +39,12 @@ hidden:
   field_end_date: true
   field_end_time: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_start_date: true
   field_start_time: true
   field_summary: true
