--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -110,5 +110,6 @@ hidden:
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
