--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -69,10 +69,12 @@ hidden:
   field_body_content: true
   field_feature_this_content: true
   field_feature_until: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
