--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -61,9 +61,12 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_topics: true
   links: true
