--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -75,6 +75,7 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_mode: true
   field_summary: true
   field_time_to_complete: true
