--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -56,6 +56,7 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_sections: true
   field_service_mode: true
   field_time_to_complete: true
