--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -94,6 +94,7 @@ hidden:
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   field_topics: true
   links: true
