--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -76,6 +76,7 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   field_topics: true
   links: true
