POWR-1093 hmm that was a lot of saving for only a few display changes

--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -11,11 +11,14 @@ dependencies:
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_end_date
+    - field.field.group.project.field_featured_content
+    - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_project_status
     - field.field.group.project.field_project_type
+    - field.field.group.project.field_search_keywords
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
@@ -121,6 +124,8 @@ hidden:
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
   field_enable_projects_menu_item: true
+  field_featured_content: true
+  field_featured_groups: true
   field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
