--- a/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
@@ -15,12 +15,15 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_groups
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
     - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
+    - field.field.group.program.field_search_keywords
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
@@ -49,9 +52,9 @@ content:
             classes: {  }
   group_site_menu_entity_view_1:
     weight: 10
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   label:
     label: hidden
     type: string
@@ -102,6 +105,8 @@ hidden:
   field_enable_programs_menu_item: true
   field_enable_projects_menu_item: true
   field_enable_services_and_inform: true
+  field_featured_content: true
+  field_featured_groups: true
   field_featured_media: true
   field_legacy_path: true
   field_logo: true
@@ -111,6 +116,4 @@ hidden:
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
-  group_site_menu_entity_view_1: true
-  label: true
   uid: true
