POWR-1116 sort projects by group title

--- a/web/sites/default/config/views.view.projects_index.yml
+++ b/web/sites/default/config/views.view.projects_index.yml
@@ -235,10 +235,10 @@ display:
             - title
           plugin_id: search_api_fulltext
       sorts:
-        content_title:
-          id: content_title
+        group_title:
+          id: group_title
           table: search_api_index_full_index
-          field: content_title
+          field: group_title
           relationship: none
           group_type: group
           admin_label: ''
