POWR-1093 save the moderated_content view to fix export

--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -1885,6 +1885,7 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
