POWR-1093 disable a problematic view

--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -1,6 +1,6 @@
 uuid: 187726a0-c8af-4232-ab5a-9fd20e6babfd
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.field_reviewer
