--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "acquia/lightning": "^3.2",
+        "acquia/lightning": "^4.0",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
@@ -48,7 +48,6 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
-        "drupal/core": "8.6.16",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/custom_view_filters": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
@@ -63,10 +62,11 @@
         "drupal/fixed_block_content": "^1.0",
         "drupal/focal_point": "^1.0@beta",
         "drupal/google_analytics": "^2.3",
-        "drupal/group": "^1.0",
+        "drupal/group": "1.0.0-rc2",
         "drupal/groupmedia": "^2.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
+        "drupal/lightning_layout": "~2.0.0",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
