POWR-1137 Change column "changed" to "last updated"

--- a/web/sites/default/config/views.view.user_assigned_to_review.yml
+++ b/web/sites/default/config/views.view.user_assigned_to_review.yml
@@ -421,7 +421,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Changed
+          label: 'Last updated'
           exclude: false
           alter:
             alter_text: true
