POWR-1145 Hide event featured media

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -42,10 +42,9 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_featured_media
         - field_start_date
-        - group_datetime
         - field_end_date
+        - group_datetime
         - group_date_and_time
         - field_all_day
         - group_start_to_end_time
@@ -63,7 +62,6 @@ third_party_settings:
       weight: 2
       format_type: html_element
       format_settings:
-        label: Date
         element: div
         show_label: false
         label_element: h3
@@ -83,7 +81,6 @@ third_party_settings:
       weight: 3
       format_type: html_element
       format_settings:
-        label: Time
         element: div
         show_label: false
         label_element: h3
@@ -102,7 +99,6 @@ third_party_settings:
       weight: 1
       format_type: html_element
       format_settings:
-        label: Datetime
         element: div
         show_label: false
         label_element: h3
@@ -253,22 +249,6 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_start_date:
     weight: 0
     label: hidden
@@ -380,6 +360,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
