--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -49,12 +49,10 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
-        - field_featured_media
       second:
         - node_title
-        - field_start_date
         - group_datetime
+        - field_start_date
         - field_all_day
         - field_end_date
         - group_date_and_time
@@ -86,7 +84,6 @@ third_party_settings:
       weight: 3
       format_type: html_element
       format_settings:
-        label: Date
         element: div
         show_label: false
         label_element: h3
@@ -106,7 +103,6 @@ third_party_settings:
       weight: 4
       format_type: html_element
       format_settings:
-        label: Time
         element: div
         show_label: false
         label_element: h3
@@ -125,7 +121,6 @@ third_party_settings:
       weight: 2
       format_type: html_element
       format_settings:
-        label: Datetime
         element: div
         show_label: false
         label_element: h3
@@ -252,22 +247,6 @@ content:
             fi-def-at: false
     type: time_formatter
     region: second
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 0
-    region: first
-    label: hidden
-    settings:
-      view_mode: embedded_50
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_start_date:
     weight: 2
     label: hidden
@@ -345,6 +324,7 @@ hidden:
   content_moderation_control: true
   field_body_content: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
