--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -24,7 +24,6 @@ dependencies:
     - ds
     - field_group
     - panelizer
-    - portland
     - time_field
     - user
 third_party_settings:
@@ -50,14 +49,12 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
-        - field_featured_media
       second:
         - field_start_date
         - field_end_date
         - group_date
-        - 'bundle_field:node'
         - group_time
+        - 'bundle_field:node'
         - node_title
         - field_all_day
         - group_datetime
@@ -121,7 +118,6 @@ third_party_settings:
       weight: 5
       format_type: html_element
       format_settings:
-        label: Datetime
         element: div
         show_label: false
         label_element: h3
@@ -285,13 +281,6 @@ content:
             fis-def-at: false
             fi: false
             fi-def-at: false
-  field_featured_media:
-    type: portland_plural_label
-    weight: 0
-    region: first
-    label: above
-    settings: {  }
-    third_party_settings: {  }
   field_start_date:
     type: datetime_default
     weight: 1
@@ -405,6 +394,7 @@ hidden:
   content_moderation_control: true
   field_body_content: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
