--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -44,8 +44,6 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
-        - field_featured_media
       second:
         - node_title
         - group_datetime
@@ -87,7 +85,6 @@ third_party_settings:
       weight: 3
       format_type: html_element
       format_settings:
-        label: Date
         element: div
         show_label: false
         label_element: h3
@@ -107,7 +104,6 @@ third_party_settings:
       weight: 4
       format_type: html_element
       format_settings:
-        label: Time
         element: div
         show_label: false
         label_element: h3
@@ -126,7 +122,6 @@ third_party_settings:
       weight: 2
       format_type: html_element
       format_settings:
-        label: Datetime
         element: div
         show_label: false
         label_element: h3
@@ -253,15 +248,6 @@ content:
             fis-def-at: false
             fi: false
             fi-def-at: false
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 0
-    region: first
-    label: hidden
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
   field_start_date:
     type: datetime_default
     weight: 5
@@ -347,6 +333,7 @@ hidden:
   content_moderation_control: true
   field_body_content: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
