--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -1137,6 +1137,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
