--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -701,9 +701,9 @@ display:
           operator: in
           value:
             all: all
+            editorial-published: editorial-published
             editorial-draft: editorial-draft
             editorial-review: editorial-review
-            editorial-published: editorial-published
             editorial-archived: editorial-archived
           group: 1
           exposed: true
@@ -721,13 +721,9 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              page_creator: '0'
-              layout_manager: '0'
-              page_reviewer: '0'
-              landing_page_creator: '0'
-              landing_page_reviewer: '0'
-              media_creator: '0'
-              media_manager: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
