--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -98,7 +98,7 @@ content:
     region: first
     label: hidden
     settings:
-      view_mode: featured
+      view_mode: featured_large
       link: false
     third_party_settings:
       ds:
