--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -131,7 +131,7 @@ content:
     region: first
     label: hidden
     settings:
-      view_mode: embedded_50
+      view_mode: featured_large
       link: false
     third_party_settings:
       ds:
